--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
-  <a routerLink='/about'>About Us</a>
-  <a routerLink='/images'>Images</a>
-  <a routerLink='/opening-hours'>Opening Hours</a>
-  <a routerLink='/custom-styling'>Custom Styling</a>
+  <a routerLinkActive="active" routerLink='/about' >About Us</a>
+  <a routerLinkActive="active" routerLink='/images'>Images</a>
+  <a routerLinkActive="active" routerLink='/opening-hours'>Opening Hours</a>
+  <a routerLinkActive="active" routerLink='/custom-styling'>Custom Styling</a>
 </nav>
 <router-outlet></router-outlet>
